# wsw

./: .gitignore  Cargo.toml  LICENSE  README.md  flags.go  go.mod  go.sum  main.go  main_windows.go  no_service_man.go  runner.go  service_man.go  svc_man.go  utils.go
.github/: dependabot.yml
.github/workflows/: main.yml
extra/: README.md  log.ps1
src/: cli.rs  logs.rs  main.rs  runner.rs  service.rs  svc_main.rs  svc_man.rs
src/commands/: install.rs  list.rs  logs.rs  mod.rs  restart.rs  run.rs  start.rs  status.rs  stop.rs  uninstall.rs
src/pkg/: logs.rs  logs_writer.rs  mod.rs  runner.rs  service.rs
testbin/: go.mod  main.go
wix/: License.rtf  main.wxs
