[package]
name = "wsw"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4", features = ["derive"] }
prettytable = "0.10.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "7.0.3"
windows = { version = "0.61", features = ["Win32_System_Services"] }
windows-service = "0.8.0"
