[package]
name = "wsw"
version = "0.3.0"
edition = "2024"
authors = ["Marco Ferragina <marco.ferragina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ferama/wsw"
license = "MIT"
description = "A tiny, practical tool that lets any executable run as a real Windows service, with zero boilerplate."

[dependencies]
chrono = "0.4.40"
clap = { version = "4", features = ["derive"] }
prettytable = "0.10.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "7.0.3"
windows = { version = "0.61", features = ["Win32_System_Services"] }
windows-service = "0.8.0"
encoding_rs = "0.8"

[profile.release]
opt-level = 2
lto = true            # Link Time Optimization
codegen-units = 1     # Single codegen unit (smaller but slower compile)
panic = "abort"       # Remove unwinding code (if you don't need backtraces)
strip = true          # Strip symbols
